WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
100227
[EFL][WK2] ASSERTION FAILED: edje(): could not paint native HTML part due to missing theme
https://bugs.webkit.org/show_bug.cgi?id=100227
Summary
[EFL][WK2] ASSERTION FAILED: edje(): could not paint native HTML part due to ...
Sudarsana Nagineni (babu)
Reported
2012-10-24 04:19:41 PDT
Assertion failure on loading any url after the web process has crashed and recovered. CRI<11710>: /devpoint/WebKit/Source/WebCore/platform/efl/RenderThemeEfl.cpp:323 paintThemePart() Could not paint native HTML part due to missing theme. ASSERTION FAILED: edje() /devpoint/WebKit/Source/WebCore/platform/efl/RenderThemeEfl.cpp(323) : bool WebCore::RenderThemeEfl::paintThemePart(WebCore::RenderObject*, WebCore::FormType, const WebCore::PaintInfo&, const WebCore::IntRect&) 1 0x7f2a06c17325 WebCore::RenderThemeEfl::paintThemePart(WebCore::RenderObject*, WebCore::FormType, WebCore::PaintInfo const&, WebCore::IntRect const&) 2 0x7f2a06c19941 WebCore::RenderThemeEfl::paintMenuList(WebCore::RenderObject*, WebCore::PaintInfo const&, WebCore::IntRect const&) 3 0x7f2a0650f403 WebCore::RenderTheme::paint(WebCore::RenderObject*, WebCore::PaintInfo const&, WebCore::IntRect const&) 4 0x7f2a063ee0d2 WebCore::RenderBox::paintBoxDecorations(WebCore::PaintInfo&, WebCore::FractionalLayoutPoint const&) 5 0x7f2a06390410 WebCore::RenderBlock::paintObject(WebCore::PaintInfo&, WebCore::FractionalLayoutPoint const&) 6 0x7f2a0638e02a WebCore::RenderBlock::paint(WebCore::PaintInfo&, WebCore::FractionalLayoutPoint const&) 7 0x7f2a06364f35 WebCore::InlineBox::paint(WebCore::PaintInfo&, WebCore::FractionalLayoutPoint const&, WebCore::FractionalLayoutUnit, WebCore::FractionalLayoutUnit) 8 0x7f2a0636ad61 WebCore::InlineFlowBox::paint(WebCore::PaintInfo&, WebCore::FractionalLayoutPoint const&, WebCore::FractionalLayoutUnit, WebCore::FractionalLayoutUnit) 9 0x7f2a0652c857 WebCore::RootInlineBox::paint(WebCore::PaintInfo&, WebCore::FractionalLayoutPoint const&, WebCore::FractionalLayoutUnit, WebCore::FractionalLayoutUnit) 10 0x7f2a064864de WebCore::RenderLineBoxList::paint(WebCore::RenderBoxModelObject*, WebCore::PaintInfo&, WebCore::FractionalLayoutPoint const&) const 11 0x7f2a0638fa89 WebCore::RenderBlock::paintContents(WebCore::PaintInfo&, WebCore::FractionalLayoutPoint const&) 12 0x7f2a06390595 WebCore::RenderBlock::paintObject(WebCore::PaintInfo&, WebCore::FractionalLayoutPoint const&) 13 0x7f2a0638e02a WebCore::RenderBlock::paint(WebCore::PaintInfo&, WebCore::FractionalLayoutPoint const&) 14 0x7f2a0638ff92 WebCore::RenderBlock::paintChild(WebCore::RenderBox*, WebCore::PaintInfo&, WebCore::FractionalLayoutPoint const&, WebCore::PaintInfo&, bool) 15 0x7f2a0638fbc5 WebCore::RenderBlock::paintChildren(WebCore::PaintInfo&, WebCore::FractionalLayoutPoint const&, WebCore::PaintInfo&, bool) 16 0x7f2a0638fb69 WebCore::RenderBlock::paintContents(WebCore::PaintInfo&, WebCore::FractionalLayoutPoint const&) 17 0x7f2a06390595 WebCore::RenderBlock::paintObject(WebCore::PaintInfo&, WebCore::FractionalLayoutPoint const&) 18 0x7f2a0638e02a WebCore::RenderBlock::paint(WebCore::PaintInfo&, WebCore::FractionalLayoutPoint const&) 19 0x7f2a0638ff92 WebCore::RenderBlock::paintChild(WebCore::RenderBox*, WebCore::PaintInfo&, WebCore::FractionalLayoutPoint const&, WebCore::PaintInfo&, bool) 20 0x7f2a0638fbc5 WebCore::RenderBlock::paintChildren(WebCore::PaintInfo&, WebCore::FractionalLayoutPoint const&, WebCore::PaintInfo&, bool) 21 0x7f2a0638fb69 WebCore::RenderBlock::paintContents(WebCore::PaintInfo&, WebCore::FractionalLayoutPoint const&) 22 0x7f2a06390595 WebCore::RenderBlock::paintObject(WebCore::PaintInfo&, WebCore::FractionalLayoutPoint const&) 23 0x7f2a0638e02a WebCore::RenderBlock::paint(WebCore::PaintInfo&, WebCore::FractionalLayoutPoint const&) 24 0x7f2a0638ff92 WebCore::RenderBlock::paintChild(WebCore::RenderBox*, WebCore::PaintInfo&, WebCore::FractionalLayoutPoint const&, WebCore::PaintInfo&, bool) 25 0x7f2a0638fbc5 WebCore::RenderBlock::paintChildren(WebCore::PaintInfo&, WebCore::FractionalLayoutPoint const&, WebCore::PaintInfo&, bool) 26 0x7f2a0638fb69 WebCore::RenderBlock::paintContents(WebCore::PaintInfo&, WebCore::FractionalLayoutPoint const&) 27 0x7f2a06390595 WebCore::RenderBlock::paintObject(WebCore::PaintInfo&, WebCore::FractionalLayoutPoint const&) 28 0x7f2a0638e02a WebCore::RenderBlock::paint(WebCore::PaintInfo&, WebCore::FractionalLayoutPoint const&) 29 0x7f2a0638ff92 WebCore::RenderBlock::paintChild(WebCore::RenderBox*, WebCore::PaintInfo&, WebCore::FractionalLayoutPoint const&, WebCore::PaintInfo&, bool) 30 0x7f2a0638fbc5 WebCore::RenderBlock::paintChildren(WebCore::PaintInfo&, WebCore::FractionalLayoutPoint const&, WebCore::PaintInfo&, bool) 31 0x7f2a0638fb69 WebCore::RenderBlock::paintContents(WebCore::PaintInfo&, WebCore::FractionalLayoutPoint const&)
Attachments
Patch
(1.53 KB, patch)
2012-10-24 04:43 PDT
,
Sudarsana Nagineni (babu)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sudarsana Nagineni (babu)
Comment 1
2012-10-24 04:43:31 PDT
Created
attachment 170364
[details]
Patch Reset the theme when the web process is recovered.
WebKit Review Bot
Comment 2
2012-10-24 05:16:19 PDT
Comment on
attachment 170364
[details]
Patch Clearing flags on attachment: 170364 Committed
r132339
: <
http://trac.webkit.org/changeset/132339
>
WebKit Review Bot
Comment 3
2012-10-24 05:16:23 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug