[EFL][WK2] ASSERTION FAILED: edje(): could not paint native HTML part due to missing theme https://bugs.webkit.org/show_bug.cgi?id=100227

Patch by Sudarsana Nagineni <sudarsana.nagineni@intel.com> on 2012-10-24
Reviewed by Kenneth Rohde Christiansen.

Browser crashes on loading any page due to missing theme after
the web process has crashed and recovered.

This patch reset the theme when the web process is recovered to
avoid a crash.

* UIProcess/API/efl/PageClientImpl.cpp:
(WebKit::PageClientImpl::didRelaunchProcess):

Canonical link: https://commits.webkit.org/118254@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@132339 268f45cc-cd09-0410-ab3c-d52691b4dbfc